[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/bebas.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gameover/gameover.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/select.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/dead.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 350
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 150
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="gameover" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1920.0 ]
}

[node name="Label" type="Label" parent="."]
margin_left = 1133.0
margin_top = 420.0
margin_right = 2710.0
margin_bottom = 884.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="Label2" type="Label" parent="."]
margin_left = 1095.0
margin_top = 1063.0
margin_right = 2014.0
margin_bottom = 1272.0
custom_fonts/font = SubResource( 2 )
text = "YOU SURVIVED:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elapsed" type="Label" parent="."]
margin_left = 2086.0
margin_top = 1063.0
margin_right = 3005.0
margin_bottom = 1272.0
custom_fonts/font = SubResource( 2 )
text = "0   seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="sound_dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
